--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <h1>I made this website!</h1>
                     <p class="hero-secondary-text">
                         A description of this website could go here. Maybe someday I'll come back to this page and make
-                        it even cooler.
+                        it a lot more functional.
                     </p>
                     <button>
                         sign up
